# web_software_infrastructure_seventh_semester

lab4_4/Frontend/static/: styles.css
lab4_4/NO-SQL/: Dockerfile
lab4_4/SQL/: Dockerfile  setup.sql
lab_1/: answers.txt  Панченко_Сергій_ІП_11_1.odt
lab_2/: answers.txt  Звіт.odt
lab_3/: Vagrantfile  answers.txt  Звіт.odt
lab_3/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  (+5 more)
lab_4/: docker-compose.yml  setup.py
lab_4/Backend/: Dockerfile  app.py  connectors.py
lab_4/Frontend/: app.py  data_managers.py  test_data.py
lab_4/backend/: Dockerfile  setup.py
lab_4/backend/src/lab_4_backend/: app.py  connectors.py
lab_4/databases/nosql/: init.json
lab_4/databases/sql/: setup.sql
lab_4/frontend/: Dockerfile  setup.py
lab_4/frontend/src/: app.py  data_managers.py
lab_4/frontend/src/lab_4_frontend/: app.py  data_managers.py  misc.py
lab_5/: .env  Cargo.toml  Dockerfile  Makefile  docker-compose.yaml  ІП_11_Панченко_5.odt
lab_5/backend/: .dockerignore  Cargo.toml  Dockerfile
lab_5/backend/src/: main.rs  routes.rs
lab_5/databases/mongo/: init.js
lab_5/databases/postgresql/: Dockerfile  setup.sql
lab_5/docs/: build.md  report.md
lab_5/frontend/: Cargo.toml  Dockerfile
lab_5/frontend/src/: main.rs
lab_5/frontend/static/: groups.html  index.html  students.html  update_group.html  update_student.html
lab_5/frontend/static/js/: api.js
lab_5/frontend/static/js/managers/: StudentManager.js  StudentUpdater.js
lab_5/frontend/static/js/validators/: photoValidator.js
lab_5/src/: main.rs
lab_5/static/: index.html
(+4 files in other folders)
