[package]
name = "lab_5"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15"
uuid = { version = "1.4", features = ["v4", "serde"] }
futures = "0.3"
image = "0.24"